experimenting, moving around